--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,12 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env*.local
 
 # vercel
 .vercel
@@ -39,3 +44,20 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Firebase
+*-firebase-adminsdk-*.json
+firebase-debug.log*
+
+# IDE and Editor
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+.eslintcache
+
+# OS
+Thumbs.db
+
+# Package managers
+pnpm-lock.yaml
